# crisp

./: .gitignore  README.md  package.json  pnpm-lock.yaml
lib/: cli.js  index.js
native/: Cargo.toml  artifacts.json
native/src/: lexer.rs  lib.rs  minify.rs  token.rs
