[package]
name = "crisp"
version = "0.1.0"
authors = ["Andrew Kachnic <ajkachnic@protonmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "crisp"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
neon = "0.6.0"
